[Swagger] Correct profile model for swagger document.
